#ifndef ICONSETOBSERVER_H
#define ICONSETOBSERVER_H

class IconSetObserver
{
public:
    IconSetObserver();
    virtual void update() = 0;
};

#endif // ICONSETOBSERVER_H
